--- a/pom.xml
+++ b/pom.xml
@@ -18,6 +18,14 @@
         <telegrambot.starter.version>6.8.0</telegrambot.starter.version>
     </properties>
     <dependencies>
+        
+        <dependency>
+            <groupId>com.google.guava</groupId>
+            <artifactId>guava</artifactId>
+            <version>32.1.2-jre</version>
+        </dependency>
+
+        
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter</artifactId>
