--- a/pom.xml
+++ b/pom.xml
@@ -18,6 +18,18 @@
         <telegrambot.starter.version>6.8.0</telegrambot.starter.version>
     </properties>
     <dependencies>
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-data-jpa</artifactId>
+        </dependency>
+        
+        <!-- https://mvnrepository.com/artifact/javax.xml.bind/jaxb-api -->
+        <dependency>
+            <groupId>javax.xml.bind</groupId>
+            <artifactId>jaxb-api</artifactId>
+            <version>2.3.1</version>
+        </dependency>
+
         
         <dependency>
             <groupId>com.google.guava</groupId>
@@ -25,6 +37,11 @@
             <version>32.1.2-jre</version>
         </dependency>
 
+        <dependency>
+            <groupId>com.mysql</groupId>
+            <artifactId>mysql-connector-j</artifactId>
+            <scope>runtime</scope>
+        </dependency>
         
         <dependency>
             <groupId>org.springframework.boot</groupId>
