--- a/pom.xml
+++ b/pom.xml
@@ -16,6 +16,7 @@
     <properties>
         <java.version>17</java.version>
         <telegrambot.starter.version>6.8.0</telegrambot.starter.version>
+        <unirest.version>3.14.2</unirest.version>
     </properties>
     <dependencies>
         <dependency>
@@ -30,6 +31,12 @@
             <version>2.3.1</version>
         </dependency>
 
+        <!-- https://mvnrepository.com/artifact/com.konghq/unirest-java -->
+        <dependency>
+            <groupId>com.konghq</groupId>
+            <artifactId>unirest-java</artifactId>
+            <version>${unirest.version}</version>
+        </dependency>
         
         <dependency>
             <groupId>com.google.guava</groupId>
