--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -10,3 +10,6 @@ spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.jpa.show-sql=true
 
 jr.api.path=https://javarush.com/api/1.0/rest
+
+spring.flyway.enabled=true
+spring.flyway.baseline-on-migrate=true
