--- a/pom.xml
+++ b/pom.xml
@@ -10,13 +10,14 @@
     </parent>
     <groupId>com.mycompany</groupId>
     <artifactId>onCommandPatternTelegramBot</artifactId>
-    <version>0.3.0-SNAPSHOT</version>
+    <version>0.5.0-SNAPSHOT</version>
     <name>onCommandPatternTelegramBot</name>
     <description>Demo project of Telegram Bot on Spring Boot</description>
     <properties>
         <java.version>17</java.version>
         <telegrambot.starter.version>6.8.0</telegrambot.starter.version>
         <unirest.version>3.14.2</unirest.version>
+        <apache.commons.version>3.12.0</apache.commons.version>
     </properties>
     <dependencies>
         <dependency>
@@ -71,12 +72,19 @@
             <version>${telegrambot.starter.version}</version>
         </dependency>
 
-
         <dependency>
             <groupId>org.projectlombok</groupId>
             <artifactId>lombok</artifactId>
             <optional>true</optional>
         </dependency>
+        
+        <!-- https://mvnrepository.com/artifact/org.apache.commons/commons-lang3 -->
+        <dependency>
+            <groupId>org.apache.commons</groupId>
+            <artifactId>commons-lang3</artifactId>
+            <version>${apache.commons.version}</version>
+        </dependency>
+        
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-test</artifactId>
