added sheduling to find new articles. modified GroupSub to avoid setting null to last article id

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,8 @@
 bot.name=MyJR02Bot
 bot.token=6339112083:AAGxIr7q2593yk8_nR7MPBG3QXR9VaiDjVw
 
+bot.recountNewArticlesFixedRate=900000
+
 #db related settings
 spring.jpa.hibernate.ddl-auto=update
 spring.datasource.url=jdbc:mysql://localhost:3306/tg_bot?useSSL=false&serverTimezone=UTC
