--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,6 @@
 bot.name=MyJR02Bot
 bot.token=6339112083:AAGxIr7q2593yk8_nR7MPBG3QXR9VaiDjVw
-
+bot.admins: Neocod, Neocod2022
 bot.recountNewArticlesFixedRate=900000
 
 #db related settings
